Tenuous first version added to test on linux

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,14 @@
 *.exe
 *.out
 *.app
+*.json
+*.ipch
+*.db
+*.pdb
+*.ilk
+*.log
+
+# Directories
+Cpp/PsuMaxima/out/build/x64-Debug/
+Cpp/PsuMaxima/out/build/x64-Release/
+*.opendb
