--- a/Windows/PsuMaxima/PsuMaxima.vcxproj
+++ b/Windows/PsuMaxima/PsuMaxima.vcxproj
@@ -139,7 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Ccp4.cpp" />
     <ClCompile Include="PsuMaxima.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Ccp4.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
