--- a/Windows/PsuMaxima/PsuMaxima.vcxproj
+++ b/Windows/PsuMaxima/PsuMaxima.vcxproj
@@ -139,11 +139,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Atom.cpp" />
     <ClCompile Include="Ccp4.cpp" />
+    <ClCompile Include="PdbFile.cpp" />
     <ClCompile Include="PsuMaxima.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Atom.h" />
     <ClInclude Include="Ccp4.h" />
+    <ClInclude Include="PdbFile.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
