--- a/Linux/CMakeLists.txt
+++ b/Linux/CMakeLists.txt
@@ -4,7 +4,7 @@ project(PsuMaxima VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-add_executable(PsuMaxima main.cpp Ccp4.h Ccp4.cpp PdbFile.h PdbFile.cpp Atom.h Atom.cpp MatrixThreeThree.h MatrixThreeThree.cpp VectorThree.h VectorThree.cpp helper.h helper.cpp CoutReports.h CoutReports.cpp SpaceTransformation.h SpaceTransformation.cpp)
+add_executable(PsuMaxima main.cpp Ccp4.h Ccp4.cpp PdbFile.h PdbFile.cpp Atom.h Atom.cpp MatrixThreeThree.h MatrixThreeThree.cpp VectorThree.h VectorThree.cpp helper.h helper.cpp CoutReports.h CoutReports.cpp SpaceTransformation.h SpaceTransformation.cpp "Interpolator.cpp" "Interpolator.h")
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
