First effort at IAM density

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ Linux/out/build/x64-Debug/.ninja_log
 Linux/out/build/x64-Debug/.ninja_deps
 Linux/.vs/slnx.sqlite
 Linux/.vs/Linux/v16/.suo
+Linux/.vs/Linux/v16/.suo
+Linux/.vs/slnx.sqlite
