--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,10 @@ Linux/.vs/slnx.sqlite
 Linux/.vs/Linux/v16/.suo
 Linux/.vs/Linux/v16/.suo
 Linux/.vs/slnx.sqlite
+Linux/.vs/Linux/v16/Browse.VC.db-shm
+Linux/.vs/Linux/v16/.suo
+Linux/.vs/slnx.sqlite
+Linux/out/build/x64-Debug/.ninja_deps
+Linux/out/build/x64-Debug/.ninja_log
+Linux/out/build/x64-Release/.ninja_deps
+Linux/out/build/x64-Release/.ninja_log
