--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,9 @@ Linux/.vs/Linux/v16/Browse.VC.db-wal
 Linux/.vs/Linux/v16/Browse.VC.db-shm
 Linux/.vs/Linux/v16/.suo
 Linux/.vs/slnx.sqlite
+Linux/out/build/x64-Release/.ninja_log
+Linux/out/build/x64-Release/.ninja_deps
+Linux/out/build/x64-Debug/.ninja_log
+Linux/out/build/x64-Debug/.ninja_deps
+Linux/.vs/slnx.sqlite
+Linux/.vs/Linux/v16/.suo
